src/test/resources/wacc_examples/invalid/syntaxErr/imports/invalidExtension.wacc
# tries to import a file that is not of the .wacc extension
begin
    include "test1.wac"
    skip
end